--- a/www/js/components/event/eventView.html
+++ b/www/js/components/event/eventView.html
@@ -3,6 +3,9 @@
         <h1 class="title">{{ event.name }}</h1>
     </div>
     <ion-content class="has-header">
-        <p>{{ event.description }}</p>
+        <h3>What:</h3>
+        <h4>{{ event.description }}</h4>
+        <h3>When:</h3>
+        <h4>{{ event.date }}</h4>
     </ion-content>
 </ion-view>
