--- a/www/js/components/events/eventsView.html
+++ b/www/js/components/events/eventsView.html
@@ -12,8 +12,7 @@
         </div>
     </ion-content>
     <div class="bar bar-footer">
-        <button class="button button-calm" ng-click="getAllEvents()">Get All Events</button>
-        <button class="button button-calm" ng-click="getLocalEvents()">Get Local Events</button>
-        <button class="button button-calm" ng-click="loadTestData()">Load Test Data</button>
+        <button class="button button-positive" ui-sref="home">All Events</button>
+        <button class="button button-positive" ui-sref="report">My Report</button>
     </div>
 </ion-view>
