--- a/www/js/components/events/eventsView.html
+++ b/www/js/components/events/eventsView.html
@@ -1,5 +1,5 @@
 ﻿<ion-view title="events" ng-controller="eventsController">
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-stable">
         <h1 class="title">Events</h1>
     </div>
     <ion-content class="has-header has-footer">
@@ -11,8 +11,8 @@
             </ui-gmap-google-map>
         </div>
     </ion-content>
-    <div class="bar bar-footer">
-        <button class="button button-positive" ui-sref="home">All Events</button>
-        <button class="button button-positive" ui-sref="report">My Report</button>
+    <div class="bar bar-footer bar-stable">
+        <button class="button button-light" ui-sref="home">All Events</button>
+        <button class="button button-light" ui-sref="report">My Report</button>
     </div>
 </ion-view>
