--- a/www/js/components/report/reportView.html
+++ b/www/js/components/report/reportView.html
@@ -1,5 +1,5 @@
 ﻿<ion-view title="report" ng-controller="reportController">
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-stable">
         <h1 class="title">Report</h1>
     </div>
     <ion-content class="has-header has-footer">
@@ -26,8 +26,8 @@
             </div>
         </div>
     </ion-content>
-    <div class="bar bar-footer">
-        <button class="button button-positive" ui-sref="home">All Events</button>
-        <button class="button button-positive" ui-sref="report">My Report</button>
+    <div class="bar bar-footer bar-stable">
+        <button class="button button-light" ui-sref="home">All Events</button>
+        <button class="button button-light" ui-sref="report">My Report</button>
     </div>
 </ion-view>S
