renamed buttons to home

--- a/www/js/components/event/eventView.html
+++ b/www/js/components/event/eventView.html
@@ -13,8 +13,8 @@
             </ui-gmap-marker>
         </ui-gmap-google-map>
     </ion-content>
-    <div class="bar bar-footer bar-stable">
-        <button class="button button-light" ui-sref="home">All Events</button>
-        <button class="button button-light" ui-sref="report">My Report</button>
+    <div class="bar bar-footer bar-light">
+        <button class="button button-stable" ui-sref="home">Home</button>
+        <button class="button button-stable" ui-sref="report">My Report</button>
     </div>
 </ion-view>
