implemented social aspects

--- a/www/js/components/report/reportView.html
+++ b/www/js/components/report/reportView.html
@@ -2,7 +2,7 @@
     <div class="bar bar-header bar-stable">
         <h1 class="title">Report</h1>
     </div>
-    <ion-content class="has-header has-footer">
+    <ion-content class="has-header has-footer content">
         <div class="list-group">
             <div class="list-group-item row" ng-repeat="event in events" ng-click="openEvent(event.id)">
                 <div class="event-item-icon col">
