--- a/www/js/components/event/eventView.html
+++ b/www/js/components/event/eventView.html
@@ -2,11 +2,15 @@
     <div class="bar bar-header bar-stable">
         <h1 class="title">{{ event.name }}</h1>
     </div>
-    <ion-content class="has-header has-footer">
+    <ion-content class="has-header has-footer content">
         <h3>What:</h3>
         <h4>{{ event.description }}</h4>
         <h3>When:</h3>
         <h4>{{ event.date }}</h4>
+        <div class="social-share">
+            <button class="button button-light" ng-click="twitterShare()">Twitter</button>
+            <button class="button button-light" ng-click="share()">Share</button>
+        </div>
         <ui-gmap-google-map center='event.location' zoom='zoom'>
             <ui-gmap-marker idKey="event.id"
                             coords="event.location" click="markerClick(event)">
