--- a/www/js/components/events/eventsView.html
+++ b/www/js/components/events/eventsView.html
@@ -2,7 +2,7 @@
     <div class="bar bar-header bar-stable">
         <h1 class="title">Events</h1>
     </div>
-    <ion-content class="has-header has-footer">
+    <ion-content class="has-header has-footer content">
         <div data-tap-disabled="true">
             <ui-gmap-google-map center='map.center' zoom='map.zoom'>
                 <ui-gmap-marker ng-repeat="event in events" idKey="event.id" 
