--- a/www/js/components/event/eventView.html
+++ b/www/js/components/event/eventView.html
@@ -2,7 +2,7 @@
     <div class="bar bar-header bar-stable">
         <h1 class="title">{{ event.name }}</h1>
     </div>
-    <ion-content class="has-header has-footer content">
+    <ion-content class="has-header has-footer content event-map">
         <h3>What:</h3>
         <h4>{{ event.description }}</h4>
         <h3>When:</h3>
@@ -18,7 +18,10 @@
         </ui-gmap-google-map>
     </ion-content>
     <div class="bar bar-footer bar-light">
-        <button class="button button-stable" ui-sref="home">Home</button>
-        <button class="button button-stable" ui-sref="report">My Report</button>
+        <button class="button button-stable col col-25" ui-sref="home">Home</button>
+        <button class="button button-stable col col-25" ui-sref="report">My Report</button>
+        <button class="button button-stable col col-25" ng-hide="loggedIn" ui-sref="register">Register</button>
+        <button class="button button-stable col col-25" ng-hide="loggedIn" ui-sref="login">Log In</button>
+        <button class="button button-stable col col-25" ng-show="loggedIn" ng-click="logout()">Log Out</button>
     </div>
 </ion-view>
