--- a/www/js/components/register/registerView.html
+++ b/www/js/components/register/registerView.html
@@ -1,15 +1,14 @@
-﻿<ion-view title="events" ng-controller="eventsController">
+﻿<ion-view title="Register" ng-controller="registerController">
     <div class="bar bar-header bar-stable">
-        <h1 class="title">Events</h1>
+        <h1 class="title">Register</h1>
     </div>
     <ion-content class="has-header has-footer content">
-        <div data-tap-disabled="true">
-            <ui-gmap-google-map center='map.center' zoom='map.zoom'>
-                <ui-gmap-marker ng-repeat="event in events" idKey="event.id" 
-                                coords="event.location" click="markerClick(event)">
-                </ui-gmap-marker>
-            </ui-gmap-google-map>
+        <div class="list">
+            <label class="item item-input">
+                <input type="email" name="email" placeholder="email" ng-model="registerDetails.email" />
+            </label>
         </div>
+        <button class="button button-stable col" ng-click="register()" >Register</button>
     </ion-content>
     <div class="bar bar-footer bar-light">
         <button class="button button-stable col col-25" ui-sref="home">Home</button>
