--- a/www/js/components/report/reportView.html
+++ b/www/js/components/report/reportView.html
@@ -27,7 +27,10 @@
         </div>
     </ion-content>
     <div class="bar bar-footer bar-light">
-        <button class="button button-stable" ui-sref="home">Home</button>
-        <button class="button button-stable" ui-sref="report">My Report</button>
+        <button class="button button-stable col col-25" ui-sref="home">Home</button>
+        <button class="button button-stable col col-25" ui-sref="report">My Report</button>
+        <button class="button button-stable col col-25" ng-hide="loggedIn" ui-sref="register">Register</button>
+        <button class="button button-stable col col-25" ng-hide="loggedIn" ui-sref="login">Log In</button>
+        <button class="button button-stable col col-25" ng-show="loggedIn" ng-click="logout()">Log Out</button>
     </div>
 </ion-view>S
