--- a/www/js/components/register/registerView.html
+++ b/www/js/components/register/registerView.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Register" ng-controller="registerController">
+﻿<ion-view title="Register" >
     <div class="bar bar-header bar-stable">
         <h1 class="title">Register</h1>
     </div>
