--- a/www/js/components/report/reportView.html
+++ b/www/js/components/report/reportView.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="report" ng-controller="reportController">
+﻿<ion-view title="report" >
     <div class="bar bar-header bar-stable">
         <h1 class="title">Report</h1>
     </div>
