--- a/www/js/components/login/loginView.html
+++ b/www/js/components/login/loginView.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="login" ng-controller="loginController">
+﻿<ion-view title="login">
     <div class="bar bar-header bar-stable">
         <h1 class="title">Login</h1>
     </div>
