--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,5 +25,28 @@
 }
 
 .social-share {
-    margin-bottom:10px;
+    margin-bottom: 10px;
+}
+
+.ve-badge {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-size:50px;
+}
+
+.badge-10 {
+    background-image: url("../img/badge10.png");
+}
+
+.badge-20 {
+    background-image: url("../img/badge20.png");
+}
+
+.badge-50 {
+    background-image: url("../img/badge50.png");
+}
+
+.badge-100 {
+    background-image: url("../img/badge100.png");
 }
