--- a/www/js/components/leaderboard/leaderboardView.html
+++ b/www/js/components/leaderboard/leaderboardView.html
@@ -1,14 +1,30 @@
-﻿<ion-view title="login">
+﻿<ion-view title="leaderboard">
     <div class="bar bar-header bar-stable">
-        <h1 class="title">Login</h1>
+        <h1 class="title">Top 10</h1>
     </div>
     <ion-content class="has-header has-footer content">
-        <div class="list">
-            <label class="item item-input">
-                <input type="email" name="email" placeholder="email" ng-model="loginDetails.email" />
-            </label>
+        <div class="row">
+            <div class="col">
+                <strong>#</strong>
+            </div>
+            <div class="col col-50">
+                <strong>User</strong>
+            </div>
+            <div class="col">
+                <strong>Score</strong>
+            </div>
         </div>
-        <button class="button button-stable col" ng-click="login()">login</button>
+        <div class="row" ng-repeat="user in leaderboard | orderBy: '-checkins'">
+            <div class="col">
+                {{ $index + 1 }}
+            </div>
+            <div class="col col-50">
+                {{ user.username }}
+            </div>
+            <div class="col">
+                {{ user.checkins }}
+            </div>
+        </div>
     </ion-content>
     <div class="bar bar-footer bar-light">
         <div class="row">
