fixed ordering of leaderboard

--- a/www/js/components/leaderboard/leaderboardView.html
+++ b/www/js/components/leaderboard/leaderboardView.html
@@ -14,7 +14,7 @@
                 <strong>Score</strong>
             </div>
         </div>
-        <div class="row" ng-repeat="user in leaderboard | orderBy: '-checkins'">
+        <div class="row" ng-repeat="user in leaderboard | orderBy: '-parseInt(checkins)' ">
             <div class="col">
                 {{ $index + 1 }}
             </div>
